--- a/src/app/components/admin/ad/add-ad/add-ad.component.html
+++ b/src/app/components/admin/ad/add-ad/add-ad.component.html
@@ -4,10 +4,8 @@
 <div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
 
   <app-admin-header></app-admin-header>
-  <div *ngIf="loading">
-      <app-loader></app-loader>
-  </div>
-  <div *ngIf="!loading" style="font-family: 'Open Sans', sans-serif;"> 
+  
+  <div  style="font-family: 'Open Sans', sans-serif;"> 
     <div
       class="h-20 w-full flex justify-center items-center"
       style="font-family: 'Open Sans', sans-serif;"
