--- a/src/app/components/profile-page/profile/profile.component.html
+++ b/src/app/components/profile-page/profile/profile.component.html
@@ -15,7 +15,7 @@
                   </button>
                   <button
                   class="shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-                  (click)="goEdit(aux.user._id)"
+                  (click)="goEdit(user._id)"
                 >
                   Editar perfil
                 </button>
