--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87028,3 +87028,6 @@ video {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
